fix issue of "cannot scan barcode on mobile phone"

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "3465399496";
+    var serviceWorkerVersion = "1250282950";
   </script>
+  <script src="https://unpkg.com/@zxing/library@0.19.1" type="application/javascript"></script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
