--- a/index.html
+++ b/index.html
@@ -18,25 +18,24 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="A Warehouse Inventory Management System">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="barcode_2_ftp_scanner">
+  <meta name="apple-mobile-web-app-title" content="warehouse_management_system">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>barcode_2_ftp_scanner</title>
+  <title>warehouse_management_system</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "1091708805";
+    var serviceWorkerVersion = "3057993631";
   </script>
-  <script src="https://unpkg.com/@zxing/library@0.19.1" type="application/javascript"></script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
